# src/models/user.js
@@ -13,28 +13,15 @@ export const User = sequelize.define(
       type: DataTypes.STRING,
       allowNull: true
     },
-    username: {
-      type: DataTypes.STRING,
-      allowNull: true
-    },
     email: {
       type: DataTypes.STRING,
       allowNull: false,
-      unique: true // Ensures that email addresses are unique
+      unique: true
     },
-    profilePicture: {
-      type: DataTypes.STRING,
-      defaultValue:
-        'https://st3.depositphotos.com/15648834/17930/v/450/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg',
-      allowNull: true
-    },
+
     password: {
       type: DataTypes.STRING,
       allowNull: false
-    },
-    gender: {
-      type: DataTypes.STRING,
-      allowNull: true
     },
     role: {
       type: DataTypes.STRING,
@@ -43,11 +30,6 @@ export const User = sequelize.define(
     },
     otpExpiresAt: {
       type: DataTypes.DATE, // Changed to DATE to handle date and time
-      allowNull: true
-    },
-    deleted: {
-      type: DataTypes.BOOLEAN,
-      defaultValue: false,
       allowNull: true
     },
     otp: {
@@ -62,10 +44,6 @@ export const User = sequelize.define(
       type: DataTypes.BOOLEAN,
       defaultValue: false
     },
-    phoneNumber: {
-      type: DataTypes.STRING,
-      allowNull: true
-    }
   },
   {
     timestamps: true, // Automatically manage `createdAt` and `updatedAt`
